@@ -16,7 +16,7 @@ remote 192.0.2.50 {
 	script "/etc/racoon/phase1-down.sh" phase1_down;
 	passive off;
         proposal {
-                encryption_algorithm 3des;
+                encryption_algorithm aes;
                 hash_algorithm sha1;
                 authentication_method hybrid_rsa_client;
                 dh_group 2;
@@ -26,8 +26,8 @@ remote 192.0.2.50 {
 
 sainfo anonymous {
         pfs_group 2;
-        lifetime time 12 hour ;
-        encryption_algorithm 3des, cast128, blowfish 448;
+        lifetime time 1 hour;
+        encryption_algorithm aes;
         authentication_algorithm hmac_sha1;
         compression_algorithm deflate ;
 }
